--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -1,23 +1,19 @@
-# Use an official lightweight Python image
-FROM python:3.10-slim
+# Use a base Python image
+FROM python:3.10
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
-# Set work directory
+# Set working directory
 WORKDIR /app
 
-# Install dependencies
+# Copy requirements and install
 COPY requirements.txt /app/
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-# Copy project files into the container
+# Copy project code
 COPY . /app/
 
-# Expose port 8000 for Django
+# Expose Django default port
 EXPOSE 8000
 
-# Default command to run the Django server
+# Command to run Django
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
