--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -3,21 +3,26 @@ version: '3.9'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
       - "8000:8000"
-    env_file:
-      - .env
+    environment:
+      - MYSQL_USER=messaging_user
+      - MYSQL_DB=messaging_db
+      - MYSQL_PASSWORD=StrongPassword123
     depends_on:
       - db
 
   db:
     image: mysql:8.0
     restart: always
-    env_file:
-      - .env
+    environment:
+      MYSQL_ROOT_PASSWORD=RootPassword123
+      MYSQL_USER=messaging_user
+      MYSQL_DB=messaging_db
+      MYSQL_PASSWORD=StrongPassword123
     ports:
       - "3306:3306"
     volumes:
