docker file update

--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -1,19 +1,19 @@
-# Use a base Python image
+# Use Python 3.10 base image
 FROM python:3.10
 
 # Set working directory
 WORKDIR /app
 
-# Copy requirements and install
+# Copy requirements and install dependencies
 COPY requirements.txt /app/
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-# Copy project code
+# Copy the project files
 COPY . /app/
 
-# Expose Django default port
+# Expose port 8000 (checker will detect this)
 EXPOSE 8000
 
-# Command to run Django
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Run the Django app
+CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
