docker file update

--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -1,19 +1,19 @@
 # Use Python 3.10 base image
 FROM python:3.10
 
-# Set working directory
+# Set work directory
 WORKDIR /app
 
 # Copy requirements and install dependencies
-COPY requirements.txt /app/
+COPY requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-# Copy the project files
-COPY . /app/
+# Copy project files
+COPY . .
 
-# Expose port 8000 (checker will detect this)
+# Expose port 8000
 EXPOSE 8000
 
-# Run the Django app
+# Run the Django development server
 CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
