--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -1,6 +1,11 @@
 pipeline {
     agent any
 
+    environment {
+        DOCKER_HUB_CREDENTIALS = 'dockerhub-credentials'  // Jenkins Docker Hub credentials ID
+        DOCKER_IMAGE_NAME = 'yourdockerusername/messaging_app:latest' // Replace with your Docker Hub username
+    }
+
     stages {
         stage('Checkout Source') {
             steps {
@@ -29,6 +34,23 @@ pipeline {
             steps {
                 // ✅ Archive and publish test results
                 junit 'report.xml'
+            }
+        }
+
+        stage('Build Docker Image') {
+            steps {
+                echo 'Building Docker image...'
+                sh "docker build -t $DOCKER_IMAGE_NAME messaging_app/"
+            }
+        }
+
+        stage('Push Docker Image') {
+            steps {
+                echo 'Pushing Docker image to Docker Hub...'
+                withCredentials([usernamePassword(credentialsId: "$DOCKER_HUB_CREDENTIALS", usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                    sh "echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin"
+                    sh "docker push $DOCKER_IMAGE_NAME"
+                }
             }
         }
     }
