--- a/messaging_app/messaging_app/.github/workflows/ci.yml
+++ b/messaging_app/messaging_app/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r messaging_app/requirements.txt
-          pip install mysqlclient pytest pytest-django
+          pip install mysqlclient pytest pytest-django flake8 coverage
 
       - name: Wait for MySQL
         run: |
@@ -57,9 +57,14 @@ jobs:
         run: |
           python messaging_app/manage.py migrate
 
-      - name: Run tests
+      - name: Run linting (flake8)
         run: |
-          pytest messaging_app --maxfail=1 --disable-warnings -q --junitxml=report.xml
+          flake8 messaging_app
+
+      - name: Run tests with coverage
+        run: |
+          coverage run -m pytest messaging_app --maxfail=1 --disable-warnings -q
+          coverage xml -o coverage.xml
 
       - name: Upload test results
         if: always()
@@ -67,3 +72,10 @@ jobs:
         with:
           name: pytest-report
           path: report.xml
+
+      - name: Upload coverage report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage.xml
